--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ matplotlib = "~=3.3"
 seaborn = "~=0.11"
 scipy = "~=1.6"
 scikit-learn = "~=0.24"
+jupyter = "*"
 
 [requires]
-python_version = "3.7"
+python_version = "3.8"
